# railways-stations-database

./: .gitignore  AGENTS.md  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml  日本鉄道db_半自動生成設計サマリー（改訂版）.md
alembic/: env.py
openspec/: project.md
openspec/changes/archive/2026-01-21-add-coverage-check/: proposal.md  tasks.md
openspec/changes/archive/2026-01-21-add-coverage-check/specs/system/: spec.md
openspec/changes/archive/2026-01-21-scaffold-initial-app/: design.md  proposal.md
openspec/changes/scaffold-initial-app/: tasks.md
openspec/changes/scaffold-initial-app/specs/system/: spec.md
openspec/specs/system/: spec.md
src/: config.py  logging_conf.py  main_api.py  main_cli.py
src/api/: system.py
src/cli/: system.py
src/core/domain/: station.py
src/core/usecases/: get_info.py
src/infra/db/: engine.py
tests/: conftest.py
tests/api/: test_health.py  test_system.py
tests/cli/: test_system.py
tests/core/usecases/: test_get_info.py
tests/test_config/: test_settings.py
tests/test_logging/: test_logging.py
