[project]
name = "railways-stations-database"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "alembic>=1.18.1",
    "asyncpg>=0.31.0",
    "click>=8.3.1",
    "fastapi>=0.128.0",
    "geoalchemy2>=0.18.1",
    "greenlet>=3.3.0",
    "pydantic-settings>=2.12.0",
    "sqlmodel>=0.0.31",
    "uvicorn>=0.40.0",
]

[dependency-groups]
dev = [
    "black>=26.1.0",
    "httpx>=0.28.1",
    "mypy>=1.19.1",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=7.0.0",
    "ruff>=0.14.13",
    "testcontainers>=4.14.0",
]

[tool.pytest.ini_options]
addopts = "-ra -q --asyncio-mode=auto --cov=src --cov-report=term-missing --cov-fail-under=100"
testpaths = ["tests"]
pythonpath = ["."]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.:",
    "def __repr__",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
]

[tool.mypy]
python_version = "3.14"
strict = true
ignore_missing_imports = true

[tool.ruff]
select = ["E", "F", "I"]
ignore = []
line-length = 88

[tool.black]
line-length = 88